--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,8 +14,9 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-gogoanime-scraper = "1.1.5"
+gogoanime-scraper = "1.1.6"
 reqwest = "0.12.7"
+dirs = "5.0.1"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
