--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zero-anime-downloader"
+name = "anidl-gui"
 version = "0.1.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -17,6 +17,7 @@ serde_json = "1"
 gogoanime-scraper = "1.1.6"
 reqwest = "0.12.7"
 dirs = "5.0.1"
+toml = "0.8.19"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
