--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,57 +1,67 @@
-name: CI/CD for Tauri App
+name: 'CI/CD'
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - release
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  publish-tauri:
+    permissions:
+      contents: write
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest] # Define the platforms
+        include:
+          - platform: 'macos-latest' # for Arm based macs (M1 and above).
+            args: '--target aarch64-apple-darwin'
+          - platform: 'macos-latest' # for Intel based macs.
+            args: '--target x86_64-apple-darwin'
+          - platform: 'ubuntu-22.04' # for Tauri v1 you could replace this with ubuntu-20.04.
+            args: ''
+          - platform: 'windows-latest'
+            args: ''
 
+    runs-on: ${{ matrix.platform }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16' # Specify your Node.js version
-
-      - name: Install dependencies
+      - name: install dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-22.04' # This must match the platform value defined above.
         run: |
-          npm install
-          npm install -g tauri
+          sudo apt-get update
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+        # webkitgtk 4.0 is for Tauri v1 - webkitgtk 4.1 is for Tauri v2.
+        # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
 
-      - name: Build Tauri App
-        run: |
-          npm run build
-          npm run tauri build
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
+      - name: setup node
+        uses: actions/setup-node@v4
         with:
-          name: anidl-gui-${{ matrix.os }} # Name artifacts based on OS
-          path: src-tauri/target/release/bundle/** # Adjust the path as necessary
+          node-version: lts/*
+          cache: 'yarn' # Set this to npm, yarn or pnpm.
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
         with:
-          name: tauri-app-ubuntu-latest # Adjust for specific OS if needed
+          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
-      - name: Deploy to your server or service
-        run: |
-          # Add your deployment commands here
-          echo "Deploying the app..."
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: './src-tauri -> target'
+
+      - name: install frontend dependencies
+        # If you don't have `beforeBuildCommand` configured you may want to build your frontend here too.
+        run: yarn install # change this to npm or pnpm depending on which one you use.
+
+      - uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
+          releaseName: 'App v__VERSION__'
+          releaseBody: 'See the assets to download this version and install.'
+          releaseDraft: true
+          prerelease: false
+          args: ${{ matrix.args }}
