--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,6 +40,9 @@ jobs:
           node-version: lts/*
           cache: 'pnpm' # Set this to npm, yarn or pnpm.
 
+      - name: install pnpm
+        run: npm install -g pnpm # Install pnpm globally
+
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -52,8 +55,7 @@ jobs:
           workspaces: './src-tauri -> target'
 
       - name: install frontend dependencies
-        # If you don't have `beforeBuildCommand` configured you may want to build your frontend here too.
-        run: yarn install # change this to npm or pnpm depending on which one you use.
+        run: pnpm install # change this to npm or pnpm depending on which one you use.
 
       - uses: tauri-apps/tauri-action@v0
         env:
