--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "anidl-gui"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["Zero"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = ["shell-open", "notification"] }
+tauri = { version = "1", features = [ "notification-all", "shell-open", "notification"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 gogoanime-scraper = "1.1.6"
