--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,9 +15,13 @@ tauri = { version = "1", features = [ "notification-all", "shell-open", "notific
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 gogoanime-scraper = "1.1.6"
-reqwest = "0.12.7"
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.12", features = ["cookies"] }
 dirs = "5.0.1"
 toml = "0.8.19"
+futures = "0.3.30"
+lazy_static = "1.5.0"
+scraper = "0.20.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
