--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "notification-all", "shell-open", "notification"] }
+tauri = { version = "1", features = [ "updater", "notification-all", "shell-open", "notification"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 gogoanime-scraper = "1.2"
