--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,7 +14,7 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = [ "api-all", "updater", "notification"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-gogoanime-scraper = "1.2"
+gogoanime-scraper = "*"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12", features = ["cookies"] }
 dirs = "5.0.1"
